--- a/WindowsGSM1/WindowsGSM1/WindowsGSM1.csproj
+++ b/WindowsGSM1/WindowsGSM1/WindowsGSM1.csproj
@@ -74,8 +74,10 @@
     <Compile Include="Gameplay\Bullet.cs" />
     <Compile Include="Gameplay\Camera.cs" />
     <Compile Include="Gameplay\Circle.cs" />
+    <Compile Include="Gameplay\Crosshair.cs" />
     <Compile Include="Gameplay\Enemy.cs" />
     <Compile Include="Gameplay\ExplosionData.cs" />
+    <Compile Include="Gameplay\HitData.cs" />
     <Compile Include="Gameplay\MovableGameObject.cs" />
     <Compile Include="Gameplay\Gem.cs" />
     <Compile Include="Gameplay\Engine.cs" />
