--- a/WindowsGSM1/WindowsGSM1/WindowsGSM1.csproj
+++ b/WindowsGSM1/WindowsGSM1/WindowsGSM1.csproj
@@ -90,6 +90,9 @@
     <Compile Include="Managers\BaseManager.cs" />
     <Compile Include="Managers\Implementation\SettingsManager.cs" />
     <Compile Include="Managers\Interfaces\ISettingsManager.cs" />
+    <Compile Include="Postprocessing\BlurEffects\BloomComponent.cs" />
+    <Compile Include="Postprocessing\BlurEffects\BloomSettings.cs" />
+    <Compile Include="Postprocessing\GraphicalPostprocessor.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ScreenManager\GameScreen.cs" />
     <Compile Include="ScreenManager\InputState.cs" />
