Fixed issues with crosshair events, implemented HUD component

--- a/WindowsGSM1/WindowsGSM1/WindowsGSM1.csproj
+++ b/WindowsGSM1/WindowsGSM1/WindowsGSM1.csproj
@@ -84,6 +84,7 @@
     <Compile Include="Gameplay\CollidableGameObject.cs" />
     <Compile Include="Gameplay\Gem.cs" />
     <Compile Include="Gameplay\Engine.cs" />
+    <Compile Include="Gameplay\HUD.cs" />
     <Compile Include="Gameplay\Level.cs" />
     <Compile Include="Gameplay\GameObject.cs" />
     <Compile Include="Gameplay\Particles.cs" />
