major refactoring: categorized classes

--- a/WindowsGSM1/WindowsGSM1/WindowsGSM1.csproj
+++ b/WindowsGSM1/WindowsGSM1/WindowsGSM1.csproj
@@ -70,28 +70,29 @@
     <Compile Include="Factories\Implementation\ManagerFactory.cs" />
     <Compile Include="Factories\Interfaces\IManagerFactory.cs" />
     <Compile Include="Game.cs" />
-    <Compile Include="Gameplay\Animation.cs" />
-    <Compile Include="Gameplay\AnimationPlayer.cs" />
-    <Compile Include="Gameplay\Bullet.cs" />
-    <Compile Include="Gameplay\Camera.cs" />
-    <Compile Include="Gameplay\Circle.cs" />
-    <Compile Include="Gameplay\Collider.cs" />
-    <Compile Include="Gameplay\Crosshair.cs" />
-    <Compile Include="Gameplay\DestructableObject.cs" />
-    <Compile Include="Gameplay\Enemy.cs" />
-    <Compile Include="Gameplay\ExplosionData.cs" />
-    <Compile Include="Gameplay\HitData.cs" />
-    <Compile Include="Gameplay\CollidableGameObject.cs" />
-    <Compile Include="Gameplay\Gem.cs" />
-    <Compile Include="Gameplay\Engine.cs" />
-    <Compile Include="Gameplay\HUD.cs" />
-    <Compile Include="Gameplay\Level.cs" />
-    <Compile Include="Gameplay\GameObject.cs" />
-    <Compile Include="Gameplay\Particles.cs" />
-    <Compile Include="Gameplay\Player.cs" />
-    <Compile Include="Gameplay\RectangleExtensions.cs" />
-    <Compile Include="Gameplay\SegmentedAnimationPlayer.cs" />
-    <Compile Include="Gameplay\TileBomb.cs" />
+    <Compile Include="Gameplay\AI\AIManager.cs" />
+    <Compile Include="Gameplay\Animations\Animation.cs" />
+    <Compile Include="Gameplay\Animations\AnimationPlayer.cs" />
+    <Compile Include="Gameplay\Mechanics\StateData\ParticleData.cs" />
+    <Compile Include="Gameplay\Objects\Implementations\Bullet.cs" />
+    <Compile Include="Gameplay\Mechanics\Camera.cs" />
+    <Compile Include="Gameplay\Mechanics\Geometry\Circle.cs" />
+    <Compile Include="Gameplay\Mechanics\Collider.cs" />
+    <Compile Include="Gameplay\Mechanics\Crosshair.cs" />
+    <Compile Include="Gameplay\Objects\Implementations\DestructableObject.cs" />
+    <Compile Include="Gameplay\Objects\Implementations\Enemy.cs" />
+    <Compile Include="Gameplay\Mechanics\StateData\ExplosionData.cs" />
+    <Compile Include="Gameplay\Mechanics\StateData\HitData.cs" />
+    <Compile Include="Gameplay\Objects\Abstractions\CollidableGameObject.cs" />
+    <Compile Include="Gameplay\Objects\Implementations\Gem.cs" />
+    <Compile Include="Gameplay\Mechanics\Engine.cs" />
+    <Compile Include="Gameplay\Mechanics\HUD.cs" />
+    <Compile Include="Gameplay\Mechanics\Level.cs" />
+    <Compile Include="Gameplay\Objects\Abstractions\GameObject.cs" />
+    <Compile Include="Gameplay\Mechanics\Particles.cs" />
+    <Compile Include="Gameplay\Objects\Player\Player.cs" />
+    <Compile Include="Extensions\RectangleExtensions.cs" />
+    <Compile Include="Gameplay\Objects\Implementations\TileBomb.cs" />
     <Compile Include="Managers\BaseManager.cs" />
     <Compile Include="Managers\Implementation\SettingsManager.cs" />
     <Compile Include="Managers\Interfaces\ISettingsManager.cs" />
@@ -99,9 +100,9 @@
     <Compile Include="Postprocessing\BlurEffects\BloomSettings.cs" />
     <Compile Include="Postprocessing\GraphicalPostprocessor.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ScreenManager\GameScreen.cs" />
-    <Compile Include="ScreenManager\InputState.cs" />
-    <Compile Include="ScreenManager\ScreenManager.cs" />
+    <Compile Include="Manager\GameScreen.cs" />
+    <Compile Include="Manager\InputState.cs" />
+    <Compile Include="Manager\ScreenManager.cs" />
     <Compile Include="Screens\BackgroundScreen.cs" />
     <Compile Include="Screens\GameplayScreen.cs" />
     <Compile Include="Screens\LoadingScreen.cs" />
@@ -113,7 +114,7 @@
     <Compile Include="Screens\Options\VideoOptionsMenuScreen.cs" />
     <Compile Include="Screens\PauseMenuScreen.cs" />
     <Compile Include="Screens\PlayerIndexEventArgs.cs" />
-    <Compile Include="Gameplay\Tile.cs" />
+    <Compile Include="Gameplay\Objects\Abstractions\Tile.cs" />
     <Compile Include="Settings\GameSettings.cs" />
     <Compile Include="Settings\VideoSettings.cs" />
     <Compile Include="Settings\Enums\ScreenResolution.cs" />
