Generic way of physics implementation for collidable objects, AI

--- a/WindowsGSM1/WindowsGSM1/WindowsGSM1.csproj
+++ b/WindowsGSM1/WindowsGSM1/WindowsGSM1.csproj
@@ -71,14 +71,19 @@
     <Compile Include="Factories\Interfaces\IManagerFactory.cs" />
     <Compile Include="Game.cs" />
     <Compile Include="Gameplay\AI\AIManager.cs" />
+    <Compile Include="Gameplay\AI\AIRule.cs" />
+    <Compile Include="Gameplay\AI\MeleeOffensiveRule.cs" />
     <Compile Include="Gameplay\Animations\Animation.cs" />
     <Compile Include="Gameplay\Animations\AnimationPlayer.cs" />
+    <Compile Include="Gameplay\Mechanics\Gravity.cs" />
     <Compile Include="Gameplay\Mechanics\StateData\ParticleData.cs" />
+    <Compile Include="Gameplay\Objects\Abstractions\AIControllableObject.cs" />
     <Compile Include="Gameplay\Objects\Implementations\Bullet.cs" />
     <Compile Include="Gameplay\Mechanics\Camera.cs" />
     <Compile Include="Gameplay\Mechanics\Geometry\Circle.cs" />
     <Compile Include="Gameplay\Mechanics\Collider.cs" />
     <Compile Include="Gameplay\Mechanics\Crosshair.cs" />
+    <Compile Include="Gameplay\Objects\Implementations\EvilBug.cs" />
     <Compile Include="Gameplay\Objects\Implementations\DestructableObject.cs" />
     <Compile Include="Gameplay\Objects\Implementations\Enemy.cs" />
     <Compile Include="Gameplay\Mechanics\StateData\ExplosionData.cs" />
